<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_view_ig"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/text_ig"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/linear_layout_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_below="@id/image_view_ig">
                <EditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/username_hint"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:inputType="text"
                    android:background="@drawable/border_login"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"/>
                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/password_hint"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/border_login"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_below="@id/linear_layout_one"
                android:gravity="right"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/blue_button_login"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="Login"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="#eaf3f2"
                android:background="@drawable/border_button_login_disable"
                android:layout_below="@id/text_view_forgot_password"/>

            <RelativeLayout
                android:id="@+id/relative_layout_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/button_login">
                <TextView
                    android:id="@+id/text_view_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="atau"
                    android:layout_marginTop="20dp"
                    android:textAllCaps="true"
                    android:layout_centerHorizontal="true"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dcdcdc"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toLeftOf="@id/text_view_or"
                    android:layout_alignParentLeft="true"/>
                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="#dcdcdc"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@id/text_view_or"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_layout_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:layout_below="@id/relative_layout_two">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_bride"/>
                <TextView
                    android:id="@+id/text_view_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_fb"
                    android:textSize="12sp"
                    android:textColor="@color/blue_button_login"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"
        android:layout_alignBottom="@id/linear_layout_two"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:id="@+id/linear_layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_account"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Daftar"
            android:textSize="12sp"
            android:textColor="@color/blue_button_login"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
</RelativeLayout>